# sgs-peritos

./: .gitignore  LICENSE  README.md  pyproject.toml
exemplos/: taxas_veiculo.py  uso_basico.py
sgs_peritos/: __init__.py  _core.py  catalogo.py  exceptions.py  http.py  regional_economy.py  utils.py
