[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sgs-peritos"
version = "1.0.0"
description = "Acesso simples as series temporais do SGS (Banco Central) para peritos"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Edilson Aguiais" },
]
keywords = ["bacen", "bcb", "sgs", "series-temporais", "pericia", "selic", "ipca", "taxa-de-juros"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Natural Language :: Portuguese (Brazilian)",
]
dependencies = [
    "pandas>=1.5",
    "httpx>=0.24",
    "tenacity>=8.0",
]

[project.urls]
Homepage = "https://github.com/edilsonaguiais/sgs-peritos"
"Projeto original (python-bcb)" = "https://github.com/wilsonfreitas/python-bcb"

[tool.setuptools]
packages = ["sgs_peritos"]
